--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 description = ""
 authors = ["Barzabel <Kochenko1995@mail.ru>"]
 readme = "README.md"
+packages = [
+    {include = "tests"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+selenium = "^4.22.0"
+pytest = "^8.2.2"
 
 
 [build-system]
